[package]
name = "cyberspider"
version = "7.8.0"
edition = "2021"
authors = ["Khaninkali"]
description = "Advanced web spider for security reconnaissance - Rosepine Edition"

[lib]
name = "cyberspider"
path = "lib.rs"

[[bin]]
name = "cyberspider"
path = "main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "stream", "multipart"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

regex = "1.0"
url = "2.0"
scraper = "0.17"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
html-entities = "0.1"
headless_chrome = { version = "1.0", features = ["fetch"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
redis = { version = "0.23", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2.0"
crossterm = "0.27"
dialoguer = "0.11"
libloading = "0.8"
dashmap = "5.0"
parking_lot = "0.12"
once_cell = "1.0"
lru = "0.12"
petgraph = "0.6"
plotters = "0.3"
image = "0.24"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
warp = { version = "0.3", features = ["tls"] }
rand = "0.8"
sysinfo = "0.30"
urlencoding = "2.1"


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = false
debug = false
overflow-checks = true
